# 3DSierpinskiOpenGL

./: CMakeLists.txt  README.md
includes/: camera.hpp  pyramid.hpp  renderer.hpp  shader.hpp
shaders/: depthShader.frag.glsl  depthShader.vert.glsl  shader.frag.glsl  shader.vert.glsl
src/: main.cpp
src/camera/: camera.h
src/shader/: shader.h
